deployments/k8s/staging/booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-app
        image: lekhai123/booking-service:latest 
        ports:
        - containerPort: 8081 
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: staging
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: booking-service
