deployments/k8s/staging/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
      - name: identity-app
        image: lekhai123/identity-service:latest 
        ports:
        - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: staging
spec:
  ports:
  - port: 8080 
    targetPort: 8080
  selector:
    app: identity-service
